--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Final Project 2.0.sln"
+    "dotnet.defaultSolution": "STACKLANDS.sln"
 }
